<resources>
    <string name="app_name">Chatliner</string>
    <string name="myname">Victor Macharia is here for you</string>
    <string name="heading">Chat while you can</string>
    <string name="descriptionHeading2">Communicate
        simply</string>
    <string name="motivation">Have Fun,Happy Chatting</string>
    <string name="toast">TOAST</string>
    <string name="description2">
        Texting is simple with Messages. Text anyone
        from your phone or computer, at any time.
        Up late? Dark mode has you covered with a
        nighttime look that\'s easier on the eyes.
    </string>

    <string name="navigation_drawer_open">open</string>

    <string name="navigation_drawer_close">close</string>

    <string name="descriptionHeading">Boost your
        conversations with
        chat features</string>

    <string name="description">
        Share high-quality media without extra
        fees, text on Wi-Fi, see when your friends
        are typing and enjoy better group chats.*
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="digit">111</string>
    <string name="submitted_lang">"your favourite is "</string>
    <string name="selected_item">Selected item</string>

    <string-array name="technology_list">
        <item>Email at vicmuchina1234@gmail.com</item>
        <item>Call: 0797389366</item>
        <item>Website: www.youtube.com/results?search_query=donut+media</item>
        <item>Github: https://github.com/</item>
        <item>Custom list View</item>

    </string-array>

    <string-array name="Languages">
        <item>Java</item>
        <item>C#</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Python</item>
        <item>Scala</item>
        <item>Perl</item>
        <item>Javascript</item>
        <item>Jquery</item>
        <item>Rust</item>
        <item>Go</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>